Fix htaccess rewrites for shared host

--- a/.htaccess
+++ b/.htaccess
@@ -7,6 +7,7 @@ SetEnv DEBUG false
 
 <IfModule mod_rewrite.c>
     RewriteEngine on
-    RewriteRule    ^$    /app/webroot/    [L]
-    RewriteRule    (.*) /app/webroot/$1    [L]
+    RewriteBase /app/
+    RewriteRule    ^$    webroot/    [L]
+    RewriteRule    (.*) webroot/$1    [L]
 </IfModule>
