--- a/webroot/.htaccess
+++ b/webroot/.htaccess
@@ -1,6 +1,7 @@
 <IfModule mod_rewrite.c>
  RewriteEngine On
+ RewriteBase /app/webroot/
  RewriteCond %{REQUEST_FILENAME} !-d
  RewriteCond %{REQUEST_FILENAME} !-f
- RewriteRule ^(.*)$ /app/webroot/index.php?url=$1 [QSA,L]
+ RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
 </IfModule>
