--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src",
-            "AdminLTE\\": "./plugins/AdminLTE/src"
+            "App\\": "src"
         }
     },
     "autoload-dev": {
